# easel

./: .gitignore  404.html  README.md  documentation-notes.md  gulpfile.js  index.html  mkdocs.yml  new.yaml  package-lock.json  package.json  pyproject.toml  run.py  todo.md  todo.txt  tsconfig.json
api-reference/custom-assets/: index.html
api-reference/custom-types/: index.html
configuration/contents/: index.html
configuration/menus/: index.html
configuration/pages/: index.html
configuration/site/: index.html
demos/demo-a/: site.yaml
demos/demo-b/: site.yaml
docs/: index.md  markdown.md
docs/api-reference/: custom-assets.md  custom-types.md
docs/configuration/: contents.md  menus.md  pages.md  site.md
docs/getting-started/: a-minimal-application.md  creating-your-site.md  installation.md
examples/sargent/: site.yaml
examples/sargent-demo/: site.yaml
examples/sargent-demo/pages/_markdown/: page.yaml
examples/sargent-demo/pages/about/: page.yaml
examples/sargent-demo/pages/food/: page.yaml
examples/sargent-demo/pages/markdown/: markdown.md
examples/sargent-demo/pages/nature/: page.yaml
examples/sargent-demo/pages/patterns/: page.yaml
examples/sargent-demo/pages/places/: page.yaml
examples/sargent/pages/about/: about.md  page.yaml
examples/sargent/pages/layout/: page.yaml
examples/sargent/pages/nature/: page.yaml
examples/sargent/pages/patterns/: page.yaml
examples/sargent/pages/places/: page.yaml
examples/snapshots/: site.yaml
examples/snapshots/pages/nature/: page.yaml
examples/snapshots/pages/patterns/: page.yaml
examples/snapshots/pages/people/: page.yaml
examples/sorolla-demo/: site.yaml
examples/sorolla-demo/pages/about/: page.yaml
examples/sorolla-demo/pages/food/: page.yaml
examples/sorolla-demo/pages/markdown/: page.yaml
examples/sorolla-demo/pages/nature/: page.yaml
examples/template/: site.yaml
examples/testing-demo/: site.yaml
getting-started/a-minimal-application/: index.html
getting-started/creating-your-site/: index.html
getting-started/installation/: index.html
img/: header-image.afdesign  icon.afdesign  menu-icon-template.afdesign  menu-mobile-toggle copy.afdesign  menu-mobile-toggle.afdesign  menu-toggle.afdesign  video-cover.psd
markdown/: index.html
scripts/: pre-commit.py  pre-commit.sh  pre_commit.py  rebuild-site-cache.sh  run-coverage.sh  run-precommit.py  run-rebuild-site-cache.sh  run-serve.sh  run.py  serve.sh
scripts/theming/: README.md  build-scss.sh  build-ts.sh  dev-scss.sh  dev-ts.sh  tsconfig-base.json  tsconfig-sargent.json  tsconfig-sorolla.json
search/: search_index.json
src/easel/: __init__.py  __main__.py  cli.py
src/easel/main/: views.py
src/easel/site/: __init__.py  config.py  contents.py  defaults.py  enums.py  errors.py  globals.py  helpers.py  markdown.py  menu.py  menus.py  model.py  pages.py  paths.py  proxies.py  site.py  theme.py  utils.py  validators.py  views.py
src/easel/theme/: views.py
tests/: conftest.py  test_cli.py  test_configs.py  test_content_factory.py  test_content_mixins.py  test_contents.py  test_easel.py  test_flask.py  test_globals.py  test_helpers.py  test_markdown.py  test_menu_factory.py  test_menus.py  test_page_factory.py  test_page_mixins.py  test_pages.py  test_site.py  test_theme.py
tests/data/yaml/: valid.yaml
tests/sites/site-menu-type-invalid/: site.yaml
tests/sites/site-valid/: site.yaml
(+265 files in other folders)
