[tool.poetry]
name = "Easel"
version = "3.0.0-dev"
description = ""
authors = []
maintainers = []
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tnahs/easel"
documentation = ""
keywords = []
packages = [
    { include = "easel", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
PyYAML = "^5.4.1"
isort = "^5.8.0"
Markdown = "^3.3.4"
pymdown-extensions = "^8.1.1"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_gitignore = true

[tool.coverage.run]
branch = true
source = ["./src/easel"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\"",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
